--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -13,7 +13,7 @@ jobs:
   pool:
     vmImage: ubuntu-16.04
   steps:
-    - template: ci/azure-test-all.yml
+    - template: azure-test-all.yml
   strategy:
     matrix:
       stable:
@@ -29,7 +29,7 @@ jobs:
   pool:
     vmImage: macos-10.15
   steps:
-    - template: ci/azure-test-all.yml
+    - template: azure-test-all.yml
   variables:
     TOOLCHAIN: stable
     OTHER_TARGET: x86_64-apple-ios
@@ -38,7 +38,7 @@ jobs:
   pool:
     vmImage: windows-2019
   steps:
-    - template: ci/azure-test-all.yml
+    - template: azure-test-all.yml
   strategy:
     matrix:
       x86_64-msvc:
@@ -52,7 +52,7 @@ jobs:
   pool:
     vmImage: ubuntu-16.04
   steps:
-    - template: ci/azure-install-rust.yml
+    - template: azure-install-rust.yml
     - bash: rustup component add rustfmt
       displayName: "Install rustfmt"
     - bash: cargo fmt --all -- --check
