--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 anyhow = "^1"
 cargo_metadata = "^0.10"
 git2 = "^0.13"
+petgraph = "^0.5"
 structopt = "^0.3"
 thiserror = "1.0"
 toml = "^0.5"
