Work on proper Cargo autoloading with cargo_metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "^1"
 cargo_metadata = "^0.10"
 git2 = "^0.13"
 petgraph = "^0.5"
+semver = "^0.9"
 structopt = "^0.3"
 thiserror = "1.0"
 toml_edit = "^0.2"
