--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "^1"
 cargo_metadata = "^0.10"
+dynfmt = { version ="^0.1", default-features = false, features = ["curly"] }
 git2 = "^0.13"
 petgraph = "^0.5"
 semver = "^0.9"
