Prototype walking the commit history to look for affected projects
In the end I think we do this nicely. This framework could be more
general, but it won't be hard to extend, and it should serve us pretty
well for now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cargo_metadata = "^0.10"
 chrono = "^0.4"
 dynfmt = { version ="^0.1", default-features = false, features = ["curly"] }
 git2 = "^0.13"
+lru = "^0.6"
 petgraph = "^0.5"
 semver = "^0.9"
 serde = { version = "^1.0", features = ["derive"] }
