--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ petgraph = "^0.5"
 semver = "^0.9"
 serde = { version = "^1.0", features = ["derive"] }
 structopt = "^0.3"
+textwrap = "^0.12"
 thiserror = "1.0"
 toml = "^0.5"
 toml_edit = "^0.2"
