Implement changelog rewriting for releases
When we're applying versions to make a release, we need to edit the
changelog header to contain the requested information, instead of the rc
bump request info.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "^1"
+atomicwrites = "^0.2"
 cargo_metadata = "^0.10"
 chrono = "^0.4"
 ci_info = "^0.10"
