ci/azure-test-all.yml: use "git show HEAD" as a diagnostic

--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -19,6 +19,9 @@ steps:
 - bash: cargo run -- apply
   displayName: "cranko apply (using bootstrapped build)"
 
+- bash: git show HEAD
+  displayName: "git show HEAD"  # show what cranko apply did
+
 # Now that we've applied versions, mainline test workflow
 
 - bash: cargo test --all
