--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -65,9 +65,13 @@ stages:
   condition: and(succeeded('BuildAndTest'), not(eq(variables['build.reason'], 'PullRequest')))
   jobs:
   - deployment: Deploy
+    environment: Deploy
     displayName: Deploy
     pool:
       vmImage: ubuntu-16.04
+
+    # variables:
+    # - group: Deployment Credentials
 
     strategy:
       runOnce:
