--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -11,7 +11,8 @@ steps:
   displayName: "Install gcc-multilib (linux)"
   condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
-# Bootstrap with the unmodified checkout at 0.0.0 versions.
+# Bootstrap a binary for the buildhost arch with the unmodified checkout at
+# 0.0.0 versions.
 
 - bash: cargo build --all
   displayName: "cargo build (bootstrap)"
@@ -30,5 +31,27 @@ steps:
 - bash: cargo test --all --release
   displayName: "cargo test (release)"
 
-- bash: find . -name cranko-target.txt -execdir cat '{}' ';' -quit
-  displayName: "Get target triple"
+- bash: |
+    version="$(cargo run -- show version cranko)"
+    target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
+    echo "##vso[task.setvariable variable=rustTarget;]$target"
+    tar="$(Build.ArtifactStagingDirectory)/binary-$target/cranko-$version-$target.tar.gz"
+    tar -C target/release "$tar" cranko
+  displayName: "Package binary (non-Windows)"
+  condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows'))
+
+- bash: |
+    version="$(cargo run -- show version cranko)"
+    target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
+    echo "##vso[task.setvariable variable=rustTarget;]$target"
+    zip="$(Build.ArtifactStagingDirectory)/binary-$target/cranko-$version-$target.zip"
+    cd target/release
+    zip -u "$zip" cranko
+  displayName: "Package binary (Windows)"
+  condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows'))
+
+- task: PublishPipelineArtifact@1
+  displayName: Publish packaged binary artifact
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)/binary-$(rustTarget)'
+    artifactName: binary-$(rustTarget)
