--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -15,10 +15,19 @@ stages:
       vmImage: ubuntu-16.04
     steps:
       - template: azure-test-all.yml
+    variables:
+      TOOLCHAIN: stable
+      OTHER_TARGET: i686-unknown-linux-gnu
+
+  - job: Linux (canary)
+    pool:
+      vmImage: ubuntu-16.04
+    steps:
+      - template: azure-test-all.yml
+        parameters:
+          canaryBuild: true
     strategy:
       matrix:
-        stable:
-          TOOLCHAIN: stable
         beta:
           TOOLCHAIN: beta
         nightly:
