--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -1,3 +1,8 @@
+parameters:
+- name: canaryBuild
+  type: boolean
+  default: false
+
 steps:
 - checkout: self
   fetchDepth: 1
@@ -31,27 +36,30 @@ steps:
 - bash: cargo test --all --release
   displayName: "cargo test (release)"
 
-- bash: |
-    version="$(cargo run -- show version cranko)"
-    target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
-    echo "##vso[task.setvariable variable=rustTarget;]$target"
-    tar="$(Build.ArtifactStagingDirectory)/binary-$target/cranko-$version-$target.tar.gz"
-    tar -C target/release "$tar" cranko
-  displayName: "Package binary (non-Windows)"
-  condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows'))
+# For non-canary builds, export artifacts.
 
-- bash: |
-    version="$(cargo run -- show version cranko)"
-    target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
-    echo "##vso[task.setvariable variable=rustTarget;]$target"
-    zip="$(Build.ArtifactStagingDirectory)/binary-$target/cranko-$version-$target.zip"
-    cd target/release
-    zip -u "$zip" cranko
-  displayName: "Package binary (Windows)"
-  condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows'))
+- ${{ if eq(parameters.canaryBuild, false) }}:
+  - bash: |
+      version="$(cargo run -- show version cranko)"
+      target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
+      echo "##vso[task.setvariable variable=rustTarget;]$target"
+      tar="$(Build.ArtifactStagingDirectory)/binary-$target/cranko-$version-$target.tar.gz"
+      tar cf "$tar" cranko -C target/release
+    displayName: "Package binary (non-Windows)"
+    condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows'))
 
-- task: PublishPipelineArtifact@1
-  displayName: Publish packaged binary artifact
-  inputs:
-    targetPath: '$(Build.ArtifactStagingDirectory)/binary-$(rustTarget)'
-    artifactName: binary-$(rustTarget)
+  - bash: |
+      version="$(cargo run -- show version cranko)"
+      target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
+      echo "##vso[task.setvariable variable=rustTarget;]$target"
+      zip="$(Build.ArtifactStagingDirectory)/binary-$target/cranko-$version-$target.zip"
+      cd target/release
+      zip -u "$zip" cranko
+    displayName: "Package binary (Windows)"
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows'))
+
+  - task: PublishPipelineArtifact@1
+    displayName: Publish packaged binary artifact
+    inputs:
+      targetPath: '$(Build.ArtifactStagingDirectory)/binary-$(rustTarget)'
+      artifactName: binary-$(rustTarget)
