--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -19,7 +19,7 @@ stages:
       TOOLCHAIN: stable
       OTHER_TARGET: i686-unknown-linux-gnu
 
-  - job: Linux (canary)
+  - job: Linux_canary
     pool:
       vmImage: ubuntu-16.04
     steps:
