--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -47,23 +47,31 @@ steps:
       mkdir -p "$artifact_dir"
       tar="$artifact_dir/cranko-$version-$target.tar.gz"
       ls -l target/release # XXX TEMP
-      tar cf "$tar" cranko -C target/release
+      tar -C target/release cf "$tar" cranko
     displayName: "Package binary (non-Windows)"
     condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows_NT'))
 
   - bash: |
       version="$(cargo run --release -- show version cranko)"
+      echo "##vso[task.setvariable variable=crankoVersion;]$version"
       target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
       echo "##vso[task.setvariable variable=rustTarget;]$target"
       # at the moment, need to convert Windows paths to Cygwin:
       staging=$(echo "$(Build.ArtifactStagingDirectory)" | sed -e 's|\\|\/|g' -e 's|^\([A-Za-z]\)\:/\(.*\)|/\L\1\E/\2|')
       artifact_dir="$staging/binary-$target"
       mkdir -p "$artifact_dir"
-      zip="$artifact_dir/cranko-$version-$target.zip"
-      ls -l target/release # XXX TEMP
-      cd target/release
-      zip -u "$zip" cranko.exe
+      mkdir -p temp_binary_archive
+      cp target/release/cranko.exe temp_binary_archive/
+    displayName: "Prep package binary (Windows)"
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+
+  - task: ArchiveFiles@2
     displayName: "Package binary (Windows)"
+    inputs:
+      rootFolderOrFile: temp_binary_archive/cranko.exe
+      includeRootFolder: false
+      archiveType: 'zip'
+      archiveFile: "$(Build.ArtifactStagingDirectory)/binary-$(rustTarget)/cranko-$(crankoVersion)-$(rustTarget).zip"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
   - task: PublishPipelineArtifact@1
