--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -10,30 +10,30 @@ trigger:
 stages:
 - stage: BuildAndTest
   jobs:
-  - job: Linux
-    pool:
-      vmImage: ubuntu-16.04
-    steps:
-      - template: azure-test-all.yml
-    variables:
-      TOOLCHAIN: stable
-      OTHER_TARGET: i686-unknown-linux-gnu
-
-  - job: Linux_canary
-    pool:
-      vmImage: ubuntu-16.04
-    steps:
-      - template: azure-test-all.yml
-        parameters:
-          canaryBuild: true
-    strategy:
-      matrix:
-        beta:
-          TOOLCHAIN: beta
-        nightly:
-          TOOLCHAIN: nightly
-    variables:
-      OTHER_TARGET: i686-unknown-linux-gnu
+  #- job: Linux
+  #  pool:
+  #    vmImage: ubuntu-16.04
+  #  steps:
+  #    - template: azure-test-all.yml
+  #  variables:
+  #    TOOLCHAIN: stable
+  #    OTHER_TARGET: i686-unknown-linux-gnu
+  #
+  #- job: Linux_canary
+  #  pool:
+  #    vmImage: ubuntu-16.04
+  #  steps:
+  #    - template: azure-test-all.yml
+  #      parameters:
+  #        canaryBuild: true
+  #  strategy:
+  #    matrix:
+  #      beta:
+  #        TOOLCHAIN: beta
+  #      nightly:
+  #        TOOLCHAIN: nightly
+  #  variables:
+  #    OTHER_TARGET: i686-unknown-linux-gnu
 
   - job: macOS
     pool:
@@ -44,31 +44,31 @@ stages:
       TOOLCHAIN: stable
       OTHER_TARGET: x86_64-apple-ios
 
-  - job: Windows
-    pool:
-      vmImage: windows-2019
-    steps:
-      - template: azure-test-all.yml
-    strategy:
-      matrix:
-        x86_64-msvc:
-          TOOLCHAIN: stable-x86_64-pc-windows-msvc
-          OTHER_TARGET: i686-pc-windows-msvc
-        x86_64-gnu:
-          TOOLCHAIN: nightly-x86_64-pc-windows-gnu
-          OTHER_TARGET: i686-pc-windows-gnu
-
-  - job: rustfmt
-    pool:
-      vmImage: ubuntu-16.04
-    steps:
-      - template: azure-install-rust.yml
-      - bash: rustup component add rustfmt
-        displayName: "Install rustfmt"
-      - bash: cargo fmt --all -- --check
-        displayName: "Check rustfmt (cargo)"
-    variables:
-      TOOLCHAIN: stable
+  #- job: Windows
+  #  pool:
+  #    vmImage: windows-2019
+  #  steps:
+  #    - template: azure-test-all.yml
+  #  strategy:
+  #    matrix:
+  #      x86_64-msvc:
+  #        TOOLCHAIN: stable-x86_64-pc-windows-msvc
+  #        OTHER_TARGET: i686-pc-windows-msvc
+  #      x86_64-gnu:
+  #        TOOLCHAIN: nightly-x86_64-pc-windows-gnu
+  #        OTHER_TARGET: i686-pc-windows-gnu
+  #
+  #- job: rustfmt
+  #  pool:
+  #    vmImage: ubuntu-16.04
+  #  steps:
+  #    - template: azure-install-rust.yml
+  #    - bash: rustup component add rustfmt
+  #      displayName: "Install rustfmt"
+  #    - bash: cargo fmt --all -- --check
+  #      displayName: "Check rustfmt (cargo)"
+  #  variables:
+  #    TOOLCHAIN: stable
 
 - stage: Deploy
   condition: and(succeeded('BuildAndTest'), not(eq(variables['build.reason'], 'PullRequest')))
@@ -87,6 +87,14 @@ stages:
         deploy:
           steps:
           # NB: make sure to properly handle both `master` and `rc` cases!
+
+          - bash: |
+              set -x
+              env
+              pwd
+              ls
+              git status
+            displayName: TEMP DEBUG
 
           - bash: |
               cd $(Pipeline.Workspace)
