--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -95,7 +95,17 @@ stages:
               pwd
               ls -la
               git status
+              git branch -a
             displayName: TEMP DEBUG
+
+          - bash: |
+              set -x
+              git pull $(Pipeline.Workspace)/git/release.bundle
+              git status
+              git branch -a
+              git switch release
+              git show
+            displayName: Pull release commit
 
           - bash: |
               cd $(Pipeline.Workspace)
