--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cranko"
-version = "0.0.0-dev.0"
+version = "0.0.1"
 authors = ["Peter Williams <peter@newton.cx>"]
 edition = "2018"
 
