Split `apply` into two separate steps
Motivated by my noticing that Cargo wants to rewrite `Cargo.lock`
after bumping the version number, so to get a properly self-consistent
tree we have to split these steps up. One could imagine workarounds but
this seems like a condition that will generally crop up.

Group these commands and `tag` under a `release-workflow` subcommand,
since they are not things that users should be running on their local
development machines.

--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -110,7 +110,7 @@ stages:
               git status
               git show
               tar xzf $(Pipeline.Workspace)/binary-x86_64-unknown-linux-gnu/cranko-*.tar.gz
-              ./cranko tag
+              ./cranko release-workflow tag
             displayName: Prepare release commit and tags
             condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'rc'))
 
