--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -22,11 +22,8 @@ steps:
 - bash: cargo build --all
   displayName: "cargo build (bootstrap)"
 
-- bash: cargo run -- apply
-  displayName: "cranko apply (using bootstrapped build)"
-
-- bash: git show HEAD
-  displayName: "git show HEAD"  # show what cranko apply did
+- bash: cargo run -- release-workflow apply-versions
+  displayName: "cranko release-workflow apply-versions (using bootstrapped build)"
 
 # Now that we've applied versions, mainline test workflow
 
@@ -81,16 +78,22 @@ steps:
       targetPath: '$(Build.ArtifactStagingDirectory)/binary-$(rustTarget)'
       artifactName: binary-$(rustTarget)
 
+  # If, further, we're the primary Linux build on the `rc` branch, generate and export
+  # the final release commit.
+
   - bash: |
+      git add .
+      cargo run -- release-workflow commit
+      git show HEAD
       artifact_dir="$(Build.ArtifactStagingDirectory)/git"
       mkdir -p "$artifact_dir"
       git bundle create "$artifact_dir/release.bundle" origin/master..HEAD
-    displayName: "Bundle release commit"
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
+    displayName: "Generate and Bundle release commit"
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'), eq(variables['Build.SourceBranchName'], 'rc'))
 
   - task: PublishPipelineArtifact@1
     displayName: Publish git bundle artifact
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'), eq(variables['Build.SourceBranchName'], 'rc'))
     inputs:
       targetPath: '$(Build.ArtifactStagingDirectory)/git'
       artifactName: git
