ci: temporary diagnostic for Windows issues
The Windows builds are occasionally reporting source files as changed and
therefore refusing to run the apply stage. On a re-run, the complaint goes
away. Maybe we need to update the index or something??

--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -22,7 +22,9 @@ steps:
 - bash: cargo build --all
   displayName: "cargo build (bootstrap)"
 
-- bash: cargo run -- release-workflow apply-versions
+- bash: |
+    git status  # temp: Windows builds intermittently report changed files here??
+    cargo run -- release-workflow apply-versions
   displayName: "cranko release-workflow apply-versions (using bootstrapped build)"
 
 # Now that we've applied versions, mainline test workflow
