github: rename `create-release` to `create-releases`
Emphasize that the default mode of operation should be to let Cranko
figure out which release(s) need to be made. Still need to get into the
monorepo mindset of vectorizing all of these operations.

--- a/ci/azure-deployment.yml
+++ b/ci/azure-deployment.yml
@@ -41,9 +41,9 @@ steps:
       GITHUB_TOKEN: $(GITHUB_TOKEN)
 
   - bash: |
-      ./cranko github create-release cranko
+      ./cranko github create-releases
       ./cranko github upload-artifacts cranko $(Pipeline.Workspace)/collection/*
-    displayName: Create GitHub release
+    displayName: Create GitHub releases
     env:
       GITHUB_TOKEN: $(GITHUB_TOKEN)
 
