--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -7,6 +7,9 @@ trigger:
     - master
     - rc
 
+variables:
+  MDBOOK_VERSION: 0.4.2
+
 stages:
 - stage: BuildAndTest
   jobs:
@@ -80,12 +83,22 @@ stages:
     variables:
       TOOLCHAIN: stable
 
-  # website build
+  # website/book build
   - job: website
     pool:
       vmImage: ubuntu-16.04
     steps:
     - template: azure-install-rust.yml
+    - bash: |
+        fn="mdbook-v$(MDBOOK_VERSION)-x86_64-unknown-linux-gnu.tar.gz"
+        url="https://github.com/rust-lang/mdBook/releases/download/v$(MDBOOK_VERSION)/$fn"
+        wget -q --progress=dot "$url"
+        tar xzf "$fn"
+        rm -f "$fn"
+        # See build.sh below:
+        mkdir -p target/debug
+        mv mdbook target/debug/
+      displayName: Install mdbook $(MDBOOK_VERSION)
     - bash: cargo build --bin cranko
       displayName: "cargo build (bootstrap)"
     - bash: cargo run -- release-workflow apply-versions
@@ -105,7 +118,7 @@ stages:
       inputs:
         targetPath: '$(Build.ArtifactStagingDirectory)/git-gh-pages'
         artifactName: git-gh-pages
-  
+
 # If all of those succeed and we're not in a pull request, run the deployment
 # pipeline. If we're specifically on the `rc` branch, this will finalize any
 # releases.
