--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -23,6 +23,7 @@ stages:
         parameters:
           primaryRcBuild: ${{ eq(variables['Build.SourceBranchName'], 'rc') }}
     variables:
+      TARGET: x86_64-unknown-linux-gnu
       TOOLCHAIN: stable
 
   # As far as I can tell, there is no way to matrix over a template *parameter*?
@@ -38,8 +39,10 @@ stages:
     strategy:
       matrix:
         beta:
+          TARGET: x86_64-unknown-linux-gnu
           TOOLCHAIN: beta
         nightly:
+          TARGET: x86_64-unknown-linux-gnu
           TOOLCHAIN: nightly
 
   # Mac builds
@@ -49,6 +52,7 @@ stages:
     steps:
       - template: azure-test-all.yml
     variables:
+      TARGET: x86_64-apple-darwin
       TOOLCHAIN: stable
 
   # Windows builds
@@ -60,8 +64,10 @@ stages:
     strategy:
       matrix:
         x86_64-msvc:
+          TARGET: x86_64-pc-windows-msvc
           TOOLCHAIN: stable-x86_64-pc-windows-msvc
         x86_64-gnu:
+          TARGET: x86_64-pc-windows-gnu
           TOOLCHAIN: stable-x86_64-pc-windows-gnu
 
   # rustfmt check
