--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -42,63 +42,36 @@ steps:
 - bash: cargo test --all --release
   displayName: "cargo test (release)"
 
-# For non-canary builds, export artifacts.
+# For non-canary builds, generate and export artifacts.
 
 - ${{ if eq(parameters.canaryBuild, false) }}:
   - bash: |
-      version="$(cargo run --release -- show version cranko)"
-      target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
-      echo "##vso[task.setvariable variable=rustTarget;]$target"
-      artifact_dir="$(Build.ArtifactStagingDirectory)/binary-$target"
-      mkdir -p "$artifact_dir"
-      tar="$artifact_dir/cranko-$version-$target.tar.gz"
-      ls -l target/release # XXX TEMP
-      cd target/release
-      tar czf "$tar" cranko
-    displayName: "Package binary (non-Windows)"
-    condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows_NT'))
+      git add .
+      cargo run -- release-workflow commit
+      git show HEAD
+    displayName: "Make release commit"
 
   - bash: |
-      version="$(cargo run --release -- show version cranko)"
-      echo "##vso[task.setvariable variable=crankoVersion;]$version"
-      target="$(find . -name cranko-target.txt -execdir cat '{}' ';' -quit)"
-      echo "##vso[task.setvariable variable=rustTarget;]$target"
-      # at the moment, need to convert Windows paths to Cygwin:
-      staging=$(echo "$(Build.ArtifactStagingDirectory)" | sed -e 's|\\|\/|g' -e 's|^\([A-Za-z]\)\:/\(.*\)|/\L\1\E/\2|')
-      artifact_dir="$staging/binary-$target"
+      artifact_dir="$(Build.ArtifactStagingDirectory)/binary-$TARGET"
       mkdir -p "$artifact_dir"
-      mkdir -p temp_binary_archive
-      cp target/release/cranko.exe temp_binary_archive/
-    displayName: "Prep package binary (Windows)"
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
-
-  - task: ArchiveFiles@2
-    displayName: "Package binary (Windows)"
-    inputs:
-      rootFolderOrFile: temp_binary_archive/cranko.exe
-      includeRootFolder: false
-      archiveType: 'zip'
-      archiveFile: "$(Build.ArtifactStagingDirectory)/binary-$(rustTarget)/cranko-$(crankoVersion)-$(rustTarget).zip"
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+      cargo run -- cargo package-released-binaries -t $TARGET $artifact_dir -- build --release
+    displayName: "Package binaries"
 
   - task: PublishPipelineArtifact@1
     displayName: Publish packaged binary artifact
     inputs:
-      targetPath: '$(Build.ArtifactStagingDirectory)/binary-$(rustTarget)'
-      artifactName: binary-$(rustTarget)
+      targetPath: '$(Build.ArtifactStagingDirectory)/binary-$TARGET'
+      artifactName: binary-$TARGET
 
-  # If, further, we're the primary build on the `rc` branch, generate and export
-  # the final release commit.
+  # If, further, we're the primary build on the `rc` branch, export our release
+  # commit as the canonical one.
 
   - ${{ if eq(parameters.primaryRcBuild, true) }}:
     - bash: |
-        git add .
-        cargo run -- release-workflow commit
-        git show HEAD
         artifact_dir="$(Build.ArtifactStagingDirectory)/git-release"
         mkdir -p "$artifact_dir"
         git bundle create "$artifact_dir/release.bundle" origin/master..HEAD
-      displayName: "Generate and Bundle release commit"
+      displayName: "Bundle release commit"
 
     - task: PublishPipelineArtifact@1
       displayName: Publish git bundle artifact
