--- a/ci/azure-test-all.yml
+++ b/ci/azure-test-all.yml
@@ -61,8 +61,8 @@ steps:
   - task: PublishPipelineArtifact@1
     displayName: Publish packaged binary artifact
     inputs:
-      targetPath: '$(Build.ArtifactStagingDirectory)/binary-$TARGET'
-      artifactName: binary-$TARGET
+      targetPath: '$(Build.ArtifactStagingDirectory)/binary-$(TARGET)'
+      artifactName: binary-$(TARGET)
 
   # If, further, we're the primary build on the `rc` branch, export our release
   # commit as the canonical one.
